Introduce calculation interruptions in ParallelDeriver.java