@@ -3,19 +3,22 @@ package cp2025.engine;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
-import java.util.Map;
 import java.util.LinkedHashMap;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import java.util.concurrent.atomic.AtomicBoolean;
 
+import cp2025.engine.Datalog;
 import cp2025.engine.Datalog.Atom;
 import cp2025.engine.Datalog.Constant;
 import cp2025.engine.Datalog.Element;
@@ -29,7 +32,7 @@ public class ParallelDeriver implements AbstractDeriver {
     private final int numWorkerThreads;
 
     public ParallelDeriver(int numWorkerThreads) {
-        if (numWorkerThreads <= 0) {
+        if (numWorkerThreads < 1) {
             throw new IllegalArgumentException("numWorkerThreads must be >= 1");
         }
         this.numWorkerThreads = numWorkerThreads;
@@ -39,81 +42,71 @@ public class ParallelDeriver implements AbstractDeriver {
     public Map<Atom, Boolean> derive(Program program, AbstractOracle oracle)
             throws InterruptedException {
 
-        // Wspólne cache dla wszystkich zapytań i wątków.
-        ConcurrentHashMap<Atom, Boolean> knownTrue = new ConcurrentHashMap<>();
-        ConcurrentHashMap<Atom, Boolean> knownFalse = new ConcurrentHashMap<>();
+        List<Atom> queries = program.queries();
+        Map<Atom, Boolean> results = new LinkedHashMap<>();
+        if (queries.isEmpty()) {
+            return results;
+        }
 
-        // Wspólny rejestr "in progress" dla wszystkich wątków.
-        ConcurrentHashMap<Atom, Set<InProgressContext>> inProgressRegistry =
-                new ConcurrentHashMap<>();
+        // Wspólny cache: stwierdzenia już rozstrzygnięte (true/false).
+        ConcurrentMap<Atom, Boolean> knownStatements = new ConcurrentHashMap<>();
 
-        // Niezmienny indeks reguł po predykacie w głowie.
+        // Wspólny indeks reguł po predykacie w głowie.
         Map<Predicate, List<Rule>> rulesByPredicate = buildRulesIndex(program);
 
-        int queryCount = program.queries().size();
-        int poolSize = Math.min(numWorkerThreads, Math.max(1, queryCount));
+        // Wspólny rejestr „in progress” dla wszystkich wątków.
+        ConcurrentMap<Atom, Set<InProgressContext>> inProgressRegistry =
+                new ConcurrentHashMap<>();
 
+        // Flaga globalnego przerwania (przerwanie derive()).
+        AtomicBoolean globalCancel = new AtomicBoolean(false);
+
+        int poolSize = Math.min(numWorkerThreads, queries.size());
         ExecutorService executor = Executors.newFixedThreadPool(poolSize);
-        List<Future<Map.Entry<Atom, Boolean>>> futures = new ArrayList<>();
 
         try {
-            for (Atom query : program.queries()) {
+            List<Future<Map.Entry<Atom, Boolean>>> futures = new ArrayList<>();
+
+            for (Atom query : queries) {
                 Callable<Map.Entry<Atom, Boolean>> task = () -> {
-                    try {
-                        ParallelDeriverState state = new ParallelDeriverState(
-                                program,
-                                oracle,
-                                rulesByPredicate,
-                                knownTrue,
-                                knownFalse,
-                                inProgressRegistry
-                        );
-
-                        Set<Atom> nonDerivable = state.deriveStatement(query, new HashSet<>());
-                        boolean result = nonDerivable.isEmpty();
-
-                        if (result) {
-                            // Zapytanie jest wyprowadzalne.
-                            Boolean prev = knownTrue.putIfAbsent(query, Boolean.TRUE);
-                            if (prev == null) {
-                                // Pierwsze ustalenie tego stwierdzenia – powiadom inne wątki.
-                                state.notifyOtherInProgress(query, null);
-                            }
-                        } else {
-                            // Zapytanie niewyprowadzalne; oznacz wszystkie zbiorem z korzenia.
-                            for (Atom a : nonDerivable) {
-                                Boolean prev = knownFalse.putIfAbsent(a, Boolean.FALSE);
-                                if (prev == null) {
-                                    state.notifyOtherInProgress(a, null);
-                                }
-                            }
-                        }
-
-                        return new AbstractMap.SimpleEntry<>(query, result);
-                    } catch (InterruptedException e) {
-                        // Zachowaj status przerwania i przekaż dalej.
-                        Thread.currentThread().interrupt();
-                        throw e;
-                    }
+                    ParallelDeriverState state = new ParallelDeriverState(
+                            program,
+                            oracle,
+                            rulesByPredicate,
+                            knownStatements,
+                            inProgressRegistry,
+                            globalCancel
+                    );
+                    DerivationResult result = state.deriveStatement(query);
+                    return new AbstractMap.SimpleEntry<>(query, result.derivable());
                 };
-
                 futures.add(executor.submit(task));
             }
 
-            Map<Atom, Boolean> results = new LinkedHashMap<>();
             for (Future<Map.Entry<Atom, Boolean>> f : futures) {
                 try {
                     Map.Entry<Atom, Boolean> entry = f.get();
                     results.put(entry.getKey(), entry.getValue());
+                } catch (InterruptedException e) {
+                    // Przerwanie wątku wywołującego derive() – globalne zakończenie.
+                    globalCancel.set(true);
+                    executor.shutdownNow();
+                    throw e;
                 } catch (ExecutionException e) {
-                    throw new RuntimeException("Error in worker thread", e.getCause());
+                    Throwable cause = e.getCause();
+                    if (cause instanceof InterruptedException ie) {
+                        // Przerwanie z wątku roboczego traktujemy jako globalne.
+                        globalCancel.set(true);
+                        executor.shutdownNow();
+                        throw ie;
+                    }
+                    throw new RuntimeException("Error in worker thread", cause);
                 }
             }
 
             return results;
-
         } finally {
-            // Upewnij się, że wątki pomocnicze zakończą pracę; brak wycieków.
+            // Upewniamy się, że wątki pomocnicze kończą pracę.
             executor.shutdownNow();
         }
     }
@@ -128,265 +121,232 @@ public class ParallelDeriver implements AbstractDeriver {
     }
 
     /**
-     * Kontekst pojedynczego wyprowadzania konkretnego stwierdzenia.
-     * Może zostać oznaczony jako anulowany przez inny wątek.
+     * Wynik próby wyprowadzenia stwierdzenia: czy wyprowadzalne oraz
+     * zbiór „failedStatements” w sensie opisu SimpleDeriver.
+     */
+    private record DerivationResult(boolean derivable, Set<Atom> failedStatements) {
+    }
+
+    /**
+     * Kontekst jednego wątku aktualnie wyprowadzającego dane stwierdzenie.
+     * Umożliwia lokalne anulowanie (bez kończenia całego derive()).
      */
     private static final class InProgressContext {
         final Atom statement;
+        final Thread ownerThread;
         volatile boolean cancelled;
 
         InProgressContext(Atom statement) {
             this.statement = statement;
+            this.ownerThread = Thread.currentThread();
             this.cancelled = false;
         }
     }
 
-    private static class ParallelDeriverState {
+    /**
+     * Stan lokalny wątku przetwarzającego jedno zapytanie,
+     * z dostępem do współdzielonych struktur.
+     */
+    private static final class ParallelDeriverState {
 
         private final Program program;
         private final AbstractOracle oracle;
         private final Map<Predicate, List<Rule>> rulesByPredicate;
+        private final ConcurrentMap<Atom, Boolean> knownStatements;
+        private final ConcurrentMap<Atom, Set<InProgressContext>> inProgressRegistry;
+        private final AtomicBoolean globalCancel;
 
-        private final ConcurrentHashMap<Atom, Boolean> knownTrue;
-        private final ConcurrentHashMap<Atom, Boolean> knownFalse;
+        // Lokalne inProgress, jak w SimpleDeriver.
+        private final Set<Atom> inProgressStatements = new HashSet<>();
 
-        // Wspólny rejestr dla wszystkich wątków wywołujących derive().
-        private final ConcurrentHashMap<Atom, Set<InProgressContext>> inProgressRegistry;
-
-        ParallelDeriverState(Program program,
-                             AbstractOracle oracle,
-                             Map<Predicate, List<Rule>> rulesByPredicate,
-                             ConcurrentHashMap<Atom, Boolean> knownTrue,
-                             ConcurrentHashMap<Atom, Boolean> knownFalse,
-                             ConcurrentHashMap<Atom, Set<InProgressContext>> inProgressRegistry) {
+        ParallelDeriverState(
+                Program program,
+                AbstractOracle oracle,
+                Map<Predicate, List<Rule>> rulesByPredicate,
+                ConcurrentMap<Atom, Boolean> knownStatements,
+                ConcurrentMap<Atom, Set<InProgressContext>> inProgressRegistry,
+                AtomicBoolean globalCancel) {
             this.program = program;
             this.oracle = oracle;
             this.rulesByPredicate = rulesByPredicate;
-            this.knownTrue = knownTrue;
-            this.knownFalse = knownFalse;
+            this.knownStatements = knownStatements;
             this.inProgressRegistry = inProgressRegistry;
+            this.globalCancel = globalCancel;
         }
 
-        Set<Atom> deriveStatement(Atom statement, Set<Atom> inProgress)
-                throws InterruptedException {
+        DerivationResult deriveStatement(Atom goal) throws InterruptedException {
+            // Globalne przerwanie.
+            checkGlobalInterrupt();
 
-            // Szybkie zakończenie przy globalnym przerwaniu.
-            if (Thread.interrupted()) {
-                throw new InterruptedException();
+            // Cache: już wiemy.
+            Boolean known = knownStatements.get(goal);
+            if (known != null) {
+                if (known) {
+                    return new DerivationResult(true, Set.of());
+                } else {
+                    return new DerivationResult(false, Set.of(goal));
+                }
             }
 
-            // Globalny cache: stwierdzenie już wyprowadzalne.
-            Boolean cachedTrue = knownTrue.get(statement);
-            if (cachedTrue != null && cachedTrue) {
-                return Collections.emptySet();
-            }
-            // Globalny cache: stwierdzenie już rozpoznane jako niewyprowadzalne.
-            Boolean cachedFalse = knownFalse.get(statement);
-            if (cachedFalse != null && !cachedFalse) {
-                Set<Atom> res = new HashSet<>();
-                res.add(statement);
-                return res;
+            // Wykrywanie cykli.
+            if (inProgressStatements.contains(goal)) {
+                return new DerivationResult(false, Set.of(goal));
             }
 
-            // Lokalne wykrywanie cykli.
-            if (inProgress.contains(statement)) {
-                Set<Atom> res = new HashSet<>();
-                res.add(statement);
-                return res;
+            // Wyrocznia?
+            if (oracle.isCalculatable(goal.predicate())) {
+                return deriveWithOracle(goal);
             }
 
-            // Rejestrujemy ten atom jako "in progress" w tym wątku.
-            InProgressContext ctx = new InProgressContext(statement);
+            InProgressContext ctx = new InProgressContext(goal);
             registerInProgress(ctx);
+            inProgressStatements.add(goal);
 
-            inProgress.add(statement);
             try {
-                return deriveStatementInternal(statement, inProgress, ctx);
+                DerivationResult result = deriveNewStatement(goal, ctx);
+
+                if (result.derivable()) {
+                    markTrueAndNotify(goal, ctx);
+                } else if (inProgressStatements.isEmpty()) {
+                    // Jak w SimpleDeriver: na szczycie rekurencji
+                    // rozstrzygamy wszystkie failedStatements jako false.
+                    for (Atom s : result.failedStatements()) {
+                        Boolean prev = knownStatements.putIfAbsent(s, Boolean.FALSE);
+                        if (prev == null) {
+                            notifyOtherInProgress(s, null);
+                        }
+                    }
+                }
+
+                return result;
             } finally {
-                inProgress.remove(statement);
+                inProgressStatements.remove(goal);
                 unregisterInProgress(ctx);
             }
         }
 
-        /**
-         * Właściwa logika wyprowadzania jednego stwierdzenia, z obsługą lokalnego anulowania.
-         */
-        private Set<Atom> deriveStatementInternal(Atom statement,
-                                                  Set<Atom> inProgress,
-                                                  InProgressContext ctx)
-                throws InterruptedException {
-
-            // Czy inne wątki anulowały wyprowadzanie tego stwierdzenia?
-            Set<Atom> cancelledResult = checkLocalCancellation(statement, ctx);
-            if (cancelledResult != null) {
-                return cancelledResult;
-            }
-
-            Predicate predicate = statement.predicate();
-
-            // Obsługa wyroczni – potencjalnie kosztowna.
-            if (oracle.isCalculatable(predicate)) {
-                // Ponowna kontrola lokalnego anulowania.
-                cancelledResult = checkLocalCancellation(statement, ctx);
-                if (cancelledResult != null) {
-                    return cancelledResult;
-                }
-                if (Thread.interrupted()) {
-                    throw new InterruptedException();
-                }
-
-                boolean value = oracle.calculate(statement);
+        private DerivationResult deriveWithOracle(Atom goal) throws InterruptedException {
+            try {
+                checkGlobalInterrupt();
+                boolean value = oracle.calculate(goal);
+                knownStatements.put(goal, value);
                 if (value) {
-                    markTrueAndNotify(statement, ctx);
-                    return Collections.emptySet();
+                    notifyOtherInProgress(goal, null);
+                    return new DerivationResult(true, Set.of());
                 } else {
-                    Set<Atom> res = new HashSet<>();
-                    res.add(statement);
-                    return res;
+                    return new DerivationResult(false, Set.of(goal));
                 }
-            }
-
-            List<Rule> rules = rulesByPredicate.get(predicate);
-            if (rules != null) {
-                for (Rule rule : rules) {
-                    cancelledResult = checkLocalCancellation(statement, ctx);
-                    if (cancelledResult != null) {
-                        return cancelledResult;
-                    }
-                    if (Thread.interrupted()) {
-                        throw new InterruptedException();
-                    }
-
-                    // Ponowna kontrola cache – inny wątek mógł to już rozwiązać.
-                    Boolean cachedTrue = knownTrue.get(statement);
-                    if (cachedTrue != null && cachedTrue) {
-                        return Collections.emptySet();
-                    }
-                    Boolean cachedFalse = knownFalse.get(statement);
-                    if (cachedFalse != null && !cachedFalse) {
-                        Set<Atom> res = new HashSet<>();
-                        res.add(statement);
-                        return res;
-                    }
-
-                    List<Variable> variablesInRule = collectVariables(rule);
-
-                    if (variablesInRule.isEmpty()) {
-                        // Reguła bez zmiennych – sprawdzamy prostą równość głowy.
-                        if (rule.head().equals(statement)) {
-                            Set<Atom> bodyNonDerivable =
-                                    deriveBody(rule.body(), inProgress);
-                            if (bodyNonDerivable.isEmpty()) {
-                                markTrueAndNotify(statement, ctx);
-                                return Collections.emptySet();
-                            }
-                        }
+            } catch (InterruptedException e) {
+                // Rozróżnienie: globalne czy lokalne?
+                if (globalCancel.get()) {
+                    // Globalne – przerywamy całe derive().
+                    throw e;
+                }
+                // Lokalne przerwanie (np. inny wątek rozstrzygnął to stwierdzenie).
+                Thread.interrupted(); // wyczyść flagę.
+                Boolean known = knownStatements.get(goal);
+                if (known != null) {
+                    if (known) {
+                        return new DerivationResult(true, Set.of());
                     } else {
-                        // Wszystkie przypisania zmiennych w regule.
-                        FunctionGenerator funcGen =
-                                new FunctionGenerator(variablesInRule, program.constants());
-
-                        for (Object assignmentObj : funcGen) {
-                            cancelledResult = checkLocalCancellation(statement, ctx);
-                            if (cancelledResult != null) {
-                                return cancelledResult;
-                            }
-                            if (Thread.interrupted()) {
-                                throw new InterruptedException();
-                            }
-
-                            // Ponowna kontrola cache wewnątrz potencjalnie dużej pętli.
-                            cachedTrue = knownTrue.get(statement);
-                            if (cachedTrue != null && cachedTrue) {
-                                return Collections.emptySet();
-                            }
-                            cachedFalse = knownFalse.get(statement);
-                            if (cachedFalse != null && !cachedFalse) {
-                                Set<Atom> res = new HashSet<>();
-                                res.add(statement);
-                                return res;
-                            }
-
-                            @SuppressWarnings("unchecked")
-                            Map<Variable, Constant> assignment =
-                                    (Map<Variable, Constant>) assignmentObj;
-
-                            Atom instantiatedHead = applyAssignment(rule.head(), assignment);
-                            if (!instantiatedHead.equals(statement)) {
-                                continue;
-                            }
-
-                            List<Atom> instantiatedBody = new ArrayList<>();
-                            for (Atom bodyAtom : rule.body()) {
-                                instantiatedBody.add(applyAssignment(bodyAtom, assignment));
-                            }
-
-                            Set<Atom> bodyNonDerivable =
-                                    deriveBody(instantiatedBody, inProgress);
-                            if (bodyNonDerivable.isEmpty()) {
-                                markTrueAndNotify(statement, ctx);
-                                return Collections.emptySet();
-                            }
-                        }
+                        return new DerivationResult(false, Set.of(goal));
                     }
                 }
+                // Konserwatywnie traktujemy jako „nie do wyprowadzenia bez inProgress”.
+                return new DerivationResult(false, Set.of(goal));
             }
-
-            // Nie udało się wyprowadzić tego stwierdzenia.
-            Set<Atom> res = new HashSet<>();
-            res.add(statement);
-            return res;
         }
 
-        Set<Atom> deriveBody(List<Atom> body, Set<Atom> inProgress)
+        private DerivationResult deriveNewStatement(Atom goal, InProgressContext ctx)
                 throws InterruptedException {
 
-            Set<Atom> allNonDerivable = new HashSet<>();
-
-            for (Atom atom : body) {
-                if (Thread.interrupted()) {
-                    throw new InterruptedException();
-                }
-
-                Set<Atom> atomNonDerivable = deriveStatement(atom, inProgress);
-                if (!atomNonDerivable.isEmpty()) {
-                    allNonDerivable.addAll(atomNonDerivable);
-                    return allNonDerivable;
-                }
+            List<Rule> rules = rulesByPredicate.get(goal.predicate());
+            if (rules == null || rules.isEmpty()) {
+                return new DerivationResult(false, Set.of(goal));
             }
 
-            return Collections.emptySet();
-        }
+            Set<Atom> failedStatements = new HashSet<>();
 
-        private List<Variable> collectVariables(Rule rule) {
-            Set<Variable> vars = new HashSet<>();
-            vars.addAll(Datalog.getVariables(Collections.singletonList(rule.head())));
-            for (Atom bodyAtom : rule.body()) {
-                vars.addAll(Datalog.getVariables(Collections.singletonList(bodyAtom)));
-            }
-            return new ArrayList<>(vars);
-        }
+            for (Rule rule : rules) {
+                // Lokalne anulowanie tego stwierdzenia.
+                DerivationResult cancelled = checkLocalCancellation(goal, ctx);
+                if (cancelled != null) {
+                    return cancelled;
+                }
 
-        private Atom applyAssignment(Atom atom, Map<Variable, Constant> assignment) {
-            List<Element> newElements = new ArrayList<>(atom.elements().size());
-            for (Element elem : atom.elements()) {
-                if (elem instanceof Variable var) {
-                    Constant constVal = assignment.get(var);
-                    if (constVal != null) {
-                        newElements.add(constVal);
-                    } else {
-                        newElements.add(elem);
+                checkGlobalInterrupt();
+
+                // Unifikacja głowy z celem (jak w SimpleDeriver).
+                java.util.Optional<List<Atom>> partiallyAssignedBodyOpt =
+                        Unifier.unify(rule, goal);
+                if (partiallyAssignedBodyOpt.isEmpty()) {
+                    continue;
+                }
+
+                List<Atom> partiallyAssignedBody = partiallyAssignedBodyOpt.get();
+                List<Variable> variables = Datalog.getVariables(partiallyAssignedBody);
+
+                if (variables.isEmpty()) {
+                    DerivationResult bodyRes = deriveBody(partiallyAssignedBody, ctx);
+                    if (bodyRes.derivable()) {
+                        return new DerivationResult(true, Set.of());
                     }
-                } else {
-                    newElements.add(elem);
+                    failedStatements.addAll(bodyRes.failedStatements());
+                    continue;
+                }
+
+                // Wszystkie podstawienia zmiennych w ciele.
+                FunctionGenerator<Variable, Constant> iterator =
+                        new FunctionGenerator<>(variables, program.constants());
+
+                for (Map<Variable, Constant> assignment : iterator) {
+                    DerivationResult cancelled2 = checkLocalCancellation(goal, ctx);
+                    if (cancelled2 != null) {
+                        return cancelled2;
+                    }
+
+                    checkGlobalInterrupt();
+
+                    List<Atom> assignedBody =
+                            Unifier.applyAssignment(partiallyAssignedBody, assignment);
+
+                    DerivationResult bodyRes = deriveBody(assignedBody, ctx);
+                    if (bodyRes.derivable()) {
+                        return new DerivationResult(true, Set.of());
+                    }
+                    failedStatements.addAll(bodyRes.failedStatements());
                 }
             }
-            return new Atom(atom.predicate(), newElements);
+
+            failedStatements.add(goal);
+            return new DerivationResult(false, failedStatements);
         }
 
-        /**
-         * Rejestruje rozpoczęcie wyprowadzania danego stwierdzenia w tym wątku.
-         */
+        private DerivationResult deriveBody(List<Atom> body, InProgressContext parentCtx)
+                throws InterruptedException {
+
+            Set<Atom> failedStatements = new HashSet<>();
+
+            for (Atom statement : body) {
+                // Jeśli nadrzędne stwierdzenie zostało lokalnie anulowane,
+                // przerywamy jak na wyższym poziomie.
+                DerivationResult cancelled = checkLocalCancellation(parentCtx.statement, parentCtx);
+                if (cancelled != null) {
+                    return cancelled;
+                }
+
+                checkGlobalInterrupt();
+
+                DerivationResult result = deriveStatement(statement);
+                if (!result.derivable()) {
+                    failedStatements.addAll(result.failedStatements());
+                    return new DerivationResult(false, failedStatements);
+                }
+            }
+
+            return new DerivationResult(true, Set.of());
+        }
+
         private void registerInProgress(InProgressContext ctx) {
             inProgressRegistry.compute(ctx.statement, (atom, set) -> {
                 if (set == null) {
@@ -397,9 +357,6 @@ public class ParallelDeriver implements AbstractDeriver {
             });
         }
 
-        /**
-         * Usuwa kontekst z rejestru po zakończeniu wyprowadzania.
-         */
         private void unregisterInProgress(InProgressContext ctx) {
             inProgressRegistry.computeIfPresent(ctx.statement, (atom, set) -> {
                 set.remove(ctx);
@@ -407,50 +364,19 @@ public class ParallelDeriver implements AbstractDeriver {
             });
         }
 
-        /**
-         * Jeśli inne wątki anulowały wyprowadzanie tego stwierdzenia, użyj
-         * globalnego cache, aby natychmiast zwrócić wynik tak,
-         * jakby został wyprowadzony lokalnie.
-         */
-        private Set<Atom> checkLocalCancellation(Atom statement, InProgressContext ctx) {
-            if (!ctx.cancelled) {
-                return null;
-            }
-
-            Boolean cachedTrue = knownTrue.get(statement);
-            if (cachedTrue != null && cachedTrue) {
-                return Collections.emptySet();
-            }
-            Boolean cachedFalse = knownFalse.get(statement);
-            if (cachedFalse != null && !cachedFalse) {
-                Set<Atom> res = new HashSet<>();
-                res.add(statement);
-                return res;
-            }
-
-            // Konserwatywnie traktujemy to jak niewyprowadzalne,
-            // jeśli z jakiegoś powodu cache nie został jeszcze uzupełniony.
-            Set<Atom> res = new HashSet<>();
-            res.add(statement);
-            return res;
-        }
-
-        /**
-         * Zaznacza stwierdzenie jako wyprowadzalne i powiadamia inne wątki,
-         * które mogą je aktualnie wyprowadzać.
-         */
         private void markTrueAndNotify(Atom statement, InProgressContext currentCtx) {
-            Boolean prev = knownTrue.putIfAbsent(statement, Boolean.TRUE);
+            Boolean prev = knownStatements.putIfAbsent(statement, Boolean.TRUE);
             if (prev == null) {
                 notifyOtherInProgress(statement, currentCtx);
             }
         }
 
         /**
-         * Ustawia flagę anulowania dla wszystkich innych aktywnych kontekstów
-         * wyprowadzających dane stwierdzenie.
+         * Ustawia flagę anulowania i wywołuje Thread.interrupt()
+         * na wszystkich innych wątkach wyprowadzających to samo stwierdzenie.
+         * Wątki odróżniają to od globalnego przerwania dzięki globalCancel.
          */
-        void notifyOtherInProgress(Atom statement, InProgressContext currentCtx) {
+        private void notifyOtherInProgress(Atom statement, InProgressContext currentCtx) {
             Set<InProgressContext> contexts = inProgressRegistry.get(statement);
             if (contexts == null) {
                 return;
@@ -458,6 +384,47 @@ public class ParallelDeriver implements AbstractDeriver {
             for (InProgressContext ctx : contexts) {
                 if (ctx != currentCtx) {
                     ctx.cancelled = true;
+                    // Przerywamy potencjalne oracle.calculate().
+                    ctx.ownerThread.interrupt();
+                }
+            }
+        }
+
+        /**
+         * Sprawdza, czy to stwierdzenie zostało lokalnie anulowane przez inny wątek
+         * i w razie czego korzysta z globalnego cache jakby wynik był wyprowadzony lokalnie.
+         */
+        private DerivationResult checkLocalCancellation(Atom statement, InProgressContext ctx) {
+            if (!ctx.cancelled) {
+                return null;
+            }
+            Boolean known = knownStatements.get(statement);
+            if (known != null) {
+                if (known) {
+                    return new DerivationResult(true, Set.of());
+                } else {
+                    return new DerivationResult(false, Set.of(statement));
+                }
+            }
+            // Konserwatywnie: niewyprowadzalne bez użycia inProgress.
+            return new DerivationResult(false, Set.of(statement));
+        }
+
+        /**
+         * Sprawdza globalne przerwanie (z zewnątrz derive()).
+         * Jeśli globalCancel ustawione lub bieżący wątek ma przerwanie
+         * i globalCancel już ustawione, rzuca InterruptedException.
+         */
+        private void checkGlobalInterrupt() throws InterruptedException {
+            if (globalCancel.get()) {
+                throw new InterruptedException("Derivation cancelled");
+            }
+            if (Thread.interrupted()) {
+                // Jeśli ktoś nas przerwał, ale globalCancel jeszcze nie jest ustawione,
+                // traktujemy to jako potencjalne lokalne przerwanie; globalne
+                // rozpoznajemy dopiero gdy globalCancel zostanie ustawione.
+                if (globalCancel.get()) {
+                    throw new InterruptedException("Derivation cancelled");
                 }
             }
         }
